--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="https://github.com/w3schools-test/hello-world/blob/master/img_hello_world.jpg?raw=true" alt="Hello World from Space"
+    style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 </body>
