--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<div><img src="https://github.com/w3schools-test/hello-world/blob/master/img_hello_git.jpg?raw=true" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
